src/externals/lgpl/neodatis/dot-net/src/test/bad/Neodatis/Odb/Test/VO/Human/Man.cs
namespace NeoDatis.Odb.Test.VO.Human
{
	public class Man : NeoDatis.Odb.Test.VO.Human.Human
	{
		public Man(string name) : base("man", "M", name)
		{
		}
	}
}
